ndb - rbr blobs etc: minor changes  bug#17045 bug#17505

sql/ha_ndbcluster_binlog.cc:
  optim: setting db/schema for data events seems unnecessary
storage/ndb/src/ndbapi/Ndb.cpp:
  use NAME_LEN